--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">  
-        <h1 class="mx-auto my-0 text-uppercase">Action Waste Services</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Big enough to serve, small enough to care!​</h2>
+        <h1 class="mx-auto my-0 text-uppercase"><%=Business.first.name%></h1>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Have a pro contact you within 10 minutes. Guaranteed, or take 10% of the quoted price.​</h2>
         <a href="/#signup" class="btn btn-primary js-scroll-trigger">Get In Touch</a>
       </div>
     </div>
