--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href=<%=current_page?(root_path)?"#page-top": "/"%>>Action Waste Services</a>
-      <a id="nav-small" class="navbar-brand js-scroll-trigger px-2" href="tel:+18777747776"><i class="fa fa-phone" aria-hidden="true"></i>(877)-774-7776</a>
+      <a class="navbar-brand js-scroll-trigger" href=<%=current_page?(root_path)?"#page-top": "/"%>><%=Business.first.name%></a>
+      <a id="nav-small" class="navbar-brand js-scroll-trigger px-2" href="tel:+1<%=Business.first.phone.split("-").join("")%>"><i class="fa fa-phone" aria-hidden="true"></i><%=Business.first.phone%></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
