--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,15 +1,7 @@
   <!-- Navigation -->
 
   <!-- Header -->
-  <header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
-      <div class="mx-auto text-center">  
-        <h1 class="mx-auto my-0 text-uppercase">Action Waste Services</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Big enough to serve, small enough to care!​</h2>
-        <a href="#signup" class="btn btn-primary js-scroll-trigger">Get In Touch</a>
-      </div>
-    </div>
-  </header>
+  <%=render "layouts/header"%>
 
   <!-- Septic About Section -->
   <section id="about" class="about-section text-center">
