--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,8 +8,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Action Waste</h2>
-          <p class="text-white-50">For over 14 years now, <em>Action Waste Services</em> has provided customers with much-needed waste services. We make your life better by taking things away through our junk removal services or keeping your septic system flowing by servicing and maintaining a free-flowing system.</p>
+          <h2 class="text-white mb-4">Home Service Power</h2>
+          <p class="text-white-50">Home Service Power will help you find the professional you need to quickly your project underway and on budget. We make your life better by helping you get the job done so that you can take care of the things that are most important to you.</p>
         </div>
       </div>
     </div>
