fixed typo on homepage

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Home Service Power</h2>
-          <p class="text-white-50">Home Service Power will help you find the professional you need to quickly your project underway and on budget. We make your life better by helping you get the job done so that you can take care of the things that are most important to you.</p>
+          <p class="text-white-50">Home Service Power will help you find the professional you need to quickly get your project underway and on budget. We make your life better by helping you get the job done so that you can take care of the things that are most important to you.</p>
         </div>
       </div>
     </div>
