home page image changes

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -13,13 +13,12 @@
         </div>
       </div>
     </div>
-      <img src="img/action-waste-services.jpeg" class="img-fluid" alt="Action waste removal">
+      <img src="/assets/home-improvement-contractor-service.jpg" class="img-fluid" alt="Home Improvement Contractor">
   </section>
 
   <section class="inverted-section">
     <div class="container align-items-center">
-        <div class="mx-auto text-center">  
-          <a class="inverted" href="tel:+18777747776"><h1 class="mx-auto my-0 text-uppercase">Call (877)-774-7776 open 24/7</h1></a>
+        <div class="mx-auto text-center p-4">  
         </div>
     </div>
   </section>
