--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,28 +2,28 @@
   <div class="container">
     <div class="row mb-5">
       <div class="col-md-4 mb-3 mb-md-0">
-        <p>Junk Removal Services</p>
-        <a href="/#projects">Garage Cleanout<a> |
-        <a href="/#projects">Attic Junk Removal<a> |
-        <a href="/#projects">Estate Sale Cleanout<a> 
+        <p>Heating</p>
+        <a href="/#projects">Boiler Repair<a> |
+        <a href="/#projects">Heating Installation<a> |
+        <a href="/#projects">Furnace Installation<a> 
       </div>
       <div class="col-md-4 mb-3 mb-md-0">
-        <p>Septic Tank Services</p>
-        <a href="/septic">Septic Tank Pumping<a> |
-        <a href="/grease-trap">Septict Tank Service<a> |
-        <a href="/emergency">Septic Tank Maintenance<a> 
+        <p>Air Conditioning</p>
+        <a href="#">AC Repair<a> |
+        <a href="#">AC Service<a> |
+        <a href="#">AC Installation<a> 
       </div>
       <div class="col-md-4 mb-3 mb-md-0">
-        <p>Excavation Services</p>
-        <a href="/excavation">Sewer Line Excavation<a> |
-        <a href="/sewer-and-drain">Main Water Excavation<a> |
-        <a href="/excavation">Utitilities Excavation<a> 
+        <p>Ventilation and More</p>
+        <a href="#">Duct Installation<a> |
+        <a href="#">Refrigeration repair<a> |
+        <a href="#">Air Quality Purification <a> 
       </div>
     </div>
     </div>
 
     <div class="container">
-      Copyright &copy; Action Waste Services 2019
+      Copyright &copy; Home Service Power
     </div>
     <div class="container small">
       designed by <a href="http://yoanante.com">Yoan Ante</a>
