--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -30,12 +30,12 @@
       <!-- Featured Service Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/action-waste-junk-removal-truck.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="/assets/air_conditioning_technician.jpg" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Junk Removal</h4>
-            <p class="text-black-50 mb-0">We can remove any junk you no longer want really fast. Our courteous and efficient team members are true professionals in removing junk from your home or business. Call <a href="tel:18777747775"> (877)-774-7775 </a> or click below.</p>
+            <h4>HVAC</h4>
+            <p class="text-black-50 mb-0">Do you want a reliable professional HVAC contractor and plumber? Well, then you are in the right place. Home Service Power provides affordable air conditioning, plumbing, and heating services. Services include installations, central AC replacement, or heating repair and much more.
             <a href="#signup" class="btn btn-primary mt-3 js-scroll-trigger">Free Quote</a>
           </div>
         </div>
@@ -44,14 +44,14 @@
       <!-- Septic Service Row -->
       <div id="septic" class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/cleaning-septic-tank.jpg" alt="Action Septic Tank Cleaning">
+          <img class="img-fluid" src="/assets/painting_contractor.jpg" alt="Action Septic Tank Cleaning">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Septic Maintenance</h4>
-                <p class="mb-0 text-white-50"> Heavy particulate matter in the waste water from the toilet, shower, sinks, and washing machine, called sludge, sinks to the bottom — this requires professional septic tank cleaning services. Action Septic is a full-service septic tank company, specializing in septic system cleaning, pumping, repairs, and inspections</p>
+                <h4 class="text-white">Painting</h4>
+                <p class="mb-0 text-white-50"> Add visual appeal and value to the exterior and interior of your home or business. If your home or business interior begins to look dull and drab revitalize it with a new coat of paint. You can re-energize it by reinforcing the current color, making it more vibrant. Or, you can totally reimagine your design and go with something new. That is the wonderful power of paint; it is so versatile you can do almost anything with it.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
                         <a href="#signup" class="btn btn-primary mt-3 js-scroll-trigger">Get a Quote</a>
               </div>
@@ -63,15 +63,14 @@
       <!-- Sewer Line Replacement Service Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/action-waste-excavation-service.jpg" alt="Action Waste Excavator Service">
+          <img class="img-fluid" src="img/action-waste-junk-removal-truck.jpg" alt="Action Waste Excavator Service">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Sewer Line Replacement</h4>
-                <p class="mb-0 text-white-50">At Action Waste Services We offer a full range of sewer services, including main sewer line repair, sewer line replacement, and sewer line cleaning. It is critical to get the proper help to repair or replace the sewer lines as soon as possible to avoid damage. 
-Our underground excavation division contains skilled operators that are precise and expert in sewer line maintenance and repair.</p>
+                <h4 class="text-white">Junk Removal</h4>
+                <p class="mb-0 text-white-50">We can remove any junk you no longer want really fast. Our courteous and efficient team members are true professionals in removing junk from your home or business.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
                 <a href="#signup" class="btn btn-primary mt-3 js-scroll-trigger">More Info</a>
               </div>
@@ -79,31 +78,12 @@ Our underground excavation division contains skilled operators that are precise 
           </div>
         </div>
       </div>
-      <!-- Grease Trap Service Row -->
-      <div id="septic" class="row justify-content-center no-gutters mb-5 mb-lg-0">
-        <div class="col-lg-6">
-          <img class="img-fluid" src="img/grease-trap-cleaning.jpg" alt="Action Septic Tank Cleaning">
-        </div>
-        <div class="col-lg-6">
-          <div class="bg-black text-center h-100 project">
-            <div class="d-flex h-100">
-              <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Grease Trap Service</h4>
-                <p class="mb-0 text-white-50"> Grease traps, are found in commercial businesses that handle food. Places such as restaurants, hotel kitchens, bakeries and more. Over time, the pipes can accumulate grease. The grease trap is the device that traps the grease before it has time to contaminate their waste water. We are a professional grease trap cleaning and service company with over 14 years of experience.</p>
-                <hr class="d-none d-lg-block mb-0 ml-0">
-                        <a href="#signup" class="btn btn-primary mt-3 js-scroll-trigger">Free Quote</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-    </div>
   </section>
 
   <!-- Form Section -->
   <section id="signup" class="signup-section">
-    <%= render "layouts/lead-form", lead: @lead %>
+
   </section>
 
   <!-- Contact Section -->
