--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -222,7 +222,7 @@
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("/img/action-junk-removal-landfill.jpg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1), rgba(55, 55, 55, 0.3), rgba(77,77,77, 1) ), url("/assets/air_conditioning_units.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -241,6 +241,7 @@
 }
 
 .contact-section {
+  background: linear-gradient(to bottom, rgba(77, 77, 77, 1) , rgba(22, 22,22, 0.3), #161616);
   padding: 5rem 0 0;
 }
 
