changed nav and landing page content

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -222,7 +222,7 @@
 
 .signup-section {
   padding: 10rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1), rgba(55, 55, 55, 0.3), rgba(77,77,77, 1) ), url("/assets/air_conditioning_units.jpg");
+  background: linear-gradient(to bottom, rgba(120, 125, 190, 0.1), rgba(85, 98, 207, 0.3), rgb(13, 69, 133) ), url("/assets/blueprint_home.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -241,7 +241,7 @@
 }
 
 .contact-section {
-  background: linear-gradient(to bottom, rgba(77, 77, 77, 1) , rgba(22, 22,22, 0.3), #161616);
+  background: linear-gradient(to bottom, rgba(13, 69, 133, 1) , rgba(22, 22,22, 0.3), #161616);
   padding: 5rem 0 0;
 }
 
