--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,10 +12,13 @@
             <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#about": "/#about"%>>About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#projects": "/#projects"%>>Junk Removal</a>
+            <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#projects": "/#projects"%>>HVAC</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#septic": "/#septic"%>>Septic </a>
+            <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#septic": "/#septic"%>>Painting </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#septic": "/#septic"%>>Junk Removal </a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#signup": "/#signup"%>>Contact</a>
