changed some info on nav and footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="container">
-      Copyright &copy; Home Service Power
+      Home Service Power &copy; Copyright <%=Time.now.year%> 
     </div>
     <div class="container small">
       designed by <a href="http://yoanante.com">Yoan Ante</a>
