--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -61,9 +61,9 @@
       </div>
 
       <!-- Sewer Line Replacement Service Row -->
-      <div class="row justify-content-center no-gutters">
+      <div id="junk-removal" class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/action-waste-junk-removal-truck.jpg" alt="Action Waste Excavator Service">
+          <img class="img-fluid" src="img/action-waste-junk-removal-truck.jpg" alt="cheap-junk-removal">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
