--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -18,7 +18,7 @@
             <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#septic": "/#septic"%>>Painting </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#septic": "/#septic"%>>Junk Removal </a>
+            <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#junk-removal": "/#junk-removal"%>>Junk Removal </a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href=<%=current_page?(root_path)?"#signup": "/#signup"%>>Contact</a>
